2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-08  Andras Varga

        * widgets.tcl: updated Tcl/Tk version check

2004-08-16  Andras Varga

        * dispstr.tcl: fix: generate only either "i=" or "b=" tag in display
        strings (TBD gned doesn't support using "i=" and "b=" together)

2004-07-27  Andras Varga

        * ebnf.lex: fixed "`yytext_ptr' undeclared" error with some flex 
        versions

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

Remaining issue: gate directions not observed in Conn Props dialog.
when submodule has random placement, strange thing happens after OK'ing Props dialog
new Tkenv display string tags not supported yet
internally, images must be named with "img:" prefix (otherwise exit.gif, 
proc.gif etc will overwrite the exit, proc Tcl commands!)

2004-03-23  Andras Varga
        
        * menuproc.tcl: bugfix: in the treeview, right click + Save always
        saved the file of the currently open canvas, not the right-clicked one.
        [reported by V.T.Nguyen]

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-22  Andras Varga

        * ebnf.lex,ebnf.y,makened.tcl,datadict.tcl: support for new "gate++"
        NED construct (temporary, until gned gets ported to nedxml)

2004-02-11  Andras Varga

        * fixed bug that caused Tk error when a display string contains
        a paremeter reference, e.g. "o=$color"

        * implemented File|Export EPS... function

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-02-03  Andras Varga

        * nedfile.cc fixes

2003-11-29  Andras Varga

        * widgets.tcl: added BLT support

        * gned.cc, tklib.cc, tkcmd.cc reorganized

2003-11-24  Andras Varga

        * added Back and Forward toolbar icons; added "New component" toolbar