@@ -1,3 +1,7 @@
+2004-10-15  Andras Varga
+
+	* fileview.tcl: fix: "View/Edit file" option didn't like some file names
+
 2004-10-04  ------ omnetpp-3.0a8 released ------
 
 2004-09-24  ------ omnetpp-3.0a7 released ------
